--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.15.4",
     "mongoose": "^4.11.8",
     "morgan": "^1.8.2",
+    "node-sass-middleware": "^0.11.0",
     "nodemon": "^1.11.0",
     "pug": "^2.0.0-rc.3"
   }
